# Poke-labs-back-end

./: .env  .gitignore  README.md  main.py  pyproject.toml
src/api/: init.py
src/conexão/: conexaoenv.py  constantes.py
src/database/: pokeDAO
src/models/: dadostestes.py  modelos.py
